# simply-curse

./: CMakeLists.txt  README.md
lib/: curse.h
tests/: ui.cpp
